@@ -2,9 +2,6 @@
 package com.hedera.services.bdd.suites.contract.hapi;
 
 import static com.hedera.services.bdd.junit.TestTags.SMART_CONTRACT;
-import static com.hedera.services.bdd.spec.HapiPropertySource.realm;
-import static com.hedera.services.bdd.spec.HapiPropertySource.shard;
-import static com.hedera.services.bdd.spec.HapiPropertySourceStaticInitializer.SHARD_AND_REALM;
 import static com.hedera.services.bdd.spec.HapiSpec.hapiTest;
 import static com.hedera.services.bdd.spec.assertions.AccountInfoAsserts.accountWith;
 import static com.hedera.services.bdd.spec.assertions.AssertUtils.inOrder;
@@ -68,6 +65,7 @@ import static com.hedera.services.bdd.suites.HapiSuite.SECP_256K1_SOURCE_KEY;
 import static com.hedera.services.bdd.suites.HapiSuite.TOKEN_TREASURY;
 import static com.hedera.services.bdd.suites.HapiSuite.ZERO_BYTE_MEMO;
 import static com.hedera.services.bdd.suites.contract.Utils.FunctionType.FUNCTION;
+import static com.hedera.services.bdd.suites.contract.Utils.asSolidityAddress;
 import static com.hedera.services.bdd.suites.contract.Utils.getABIFor;
 import static com.hedera.services.bdd.suites.contract.hapi.ContractUpdateSuite.ADMIN_KEY;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.BUSY;
@@ -96,16 +94,20 @@ import com.google.protobuf.ByteString;
 import com.hedera.node.app.hapi.utils.ethereum.EthTxData;
 import com.hedera.services.bdd.junit.HapiTest;
 import com.hedera.services.bdd.junit.LeakyHapiTest;
-import com.hedera.services.bdd.spec.HapiPropertySource;
+import com.hedera.services.bdd.spec.HapiSpec;
 import com.hedera.services.bdd.spec.assertions.ContractInfoAsserts;
 import com.hedera.services.bdd.spec.keys.KeyShape;
 import com.hedera.services.bdd.spec.transactions.TxnUtils;
 import com.hedera.services.bdd.spec.transactions.crypto.HapiCryptoTransfer;
 import com.hedera.services.bdd.spec.utilops.UtilVerbs;
 import com.hedera.services.bdd.utils.Signing;
+import com.hederahashgraph.api.proto.java.AccountID;
+import com.hederahashgraph.api.proto.java.ContractID;
 import com.hederahashgraph.api.proto.java.FileID;
 import com.hederahashgraph.api.proto.java.Key;
 import com.hederahashgraph.api.proto.java.ResponseCodeEnum;
+import com.hederahashgraph.api.proto.java.Timestamp;
+import com.hederahashgraph.api.proto.java.TransactionRecord;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.math.BigInteger;
@@ -113,12 +115,14 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Stream;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.tuweni.bytes.Bytes32;
-import org.hiero.consensus.model.utility.CommonUtils;
+import org.hiero.base.utility.CommonUtils;
 import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.Tag;
 
@@ -129,7 +133,6 @@ public class ContractCreateSuite {
     public static final String EMPTY_CONSTRUCTOR_CONTRACT = "EmptyConstructor";
     public static final String PARENT_INFO = "parentInfo";
     private static final String PAYER = "payer";
-    private static final String ALICE = "alice";
 
     private static final Logger log = LogManager.getLogger(ContractCreateSuite.class);
 
@@ -140,17 +143,13 @@ public class ContractCreateSuite {
             "f8a58085174876e800830186a08080b853604580600e600039806000f350fe7fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffe03601600081602082378035828234f58015156039578182fd5b8082525050506014600cf31ba02222222222222222222222222222222222222222222222222222222222222222a02222222222222222222222222222222222222222222222222222222222222222";
     private static final String EXPECTED_DEPLOYER_ADDRESS = "4e59b44847b379578588920ca78fbf26c0b4956c";
     private static final String DEPLOYER = "DeployerContract";
-    public static final String ENTITIES_UNLIMITED_AUTO_ASSOCIATIONS_ENABLED =
-            "entities.unlimitedAutoAssociationsEnabled";
-    public static final String LEDGER_MAX_AUTO_ASSOCIATIONS = "ledger.maxAutoAssociations";
-
     private static final String FUNGIBLE_TOKEN = "fungible";
     private static final String MULTI_KEY = "multiKey";
 
     @HapiTest
     final Stream<DynamicTest> createDeterministicDeployer() {
-        final var creatorAddress = ByteString.copyFrom(CommonUtils.unhex(DEPLOYMENT_SIGNER));
-        final var transaction = ByteString.copyFrom(CommonUtils.unhex(DEPLOYMENT_TRANSACTION));
+        final var creatorAddress = ByteString.copyFrom(Objects.requireNonNull(CommonUtils.unhex(DEPLOYMENT_SIGNER)));
+        final var transaction = ByteString.copyFrom(Objects.requireNonNull(CommonUtils.unhex(DEPLOYMENT_TRANSACTION)));
         final var systemFileId = FileID.newBuilder().setFileNum(159).build();
 
         return hapiTest(
@@ -185,13 +184,13 @@ public class ContractCreateSuite {
                 contractCreate(contract)
                         .adminKey(THRESHOLD)
                         .declinedReward(true)
-                        .stakedAccountId(SHARD_AND_REALM + "10")
+                        .stakedAccountId("10")
                         .refusingEthConversion(),
                 getContractInfo(contract)
                         .has(contractWith()
                                 .isDeclinedReward(true)
                                 .noStakingNodeId()
-                                .stakedAccountId(SHARD_AND_REALM + "10")),
+                                .stakedAccountId("10")),
                 contractCreate(contract)
                         .adminKey(THRESHOLD)
                         .declinedReward(false)
@@ -206,13 +205,13 @@ public class ContractCreateSuite {
                 contractCreate(contract)
                         .adminKey(THRESHOLD)
                         .declinedReward(false)
-                        .stakedAccountId(SHARD_AND_REALM + "10")
+                        .stakedAccountId("10")
                         .refusingEthConversion(),
                 getContractInfo(contract)
                         .has(contractWith()
                                 .isDeclinedReward(false)
                                 .noStakingNodeId()
-                                .stakedAccountId(SHARD_AND_REALM + "10"))
+                                .stakedAccountId("10"))
                         .logged(),
                 /* sentinel values throw */
                 contractCreate(contract)
@@ -257,13 +256,12 @@ public class ContractCreateSuite {
     @HapiTest
     final Stream<DynamicTest> cannotSendToNonExistentAccount() {
         final var contract = "Multipurpose";
-        Object[] donationArgs =
-                new Object[] {new BigInteger(HapiPropertySource.asSolidityAddress(shard, realm, 666666L)), "Hey, Ma!"};
 
-        return hapiTest(
-                uploadInitCode(contract),
-                contractCreate(contract).balance(666),
-                contractCall(contract, "donate", donationArgs).hasKnownStatus(CONTRACT_REVERT_EXECUTED));
+        return hapiTest(uploadInitCode(contract), contractCreate(contract).balance(666), withOpContext((spec, log) -> {
+            final Object[] donationArgs = {new BigInteger(asSolidityAddress(spec, 666_666L)), "Hey, Ma!"};
+            final var callOp = contractCall(contract, "donate", donationArgs).hasKnownStatus(CONTRACT_REVERT_EXECUTED);
+            allRunFor(spec, callOp);
+        }));
     }
 
     @HapiTest
@@ -334,7 +332,10 @@ public class ContractCreateSuite {
                         .via("constructorCreate")
                         .maxAutomaticTokenAssociations(5)
                         .hasKnownStatus(SUCCESS),
-                contractCall(createContract, "create").via("createViaCall").hasKnownStatus(SUCCESS),
+                contractCall(createContract, "create")
+                        .via("createViaCall")
+                        .gas(400_000L)
+                        .hasKnownStatus(SUCCESS),
                 ethereumCall(createContract, "create")
                         .type(EthTxData.EthTransactionType.EIP1559)
                         .signingWith(SECP_256K1_SOURCE_KEY)
@@ -383,20 +384,20 @@ public class ContractCreateSuite {
                     secondStickId.set(createdIds.get(2).getContractNum());
                     thirdStickId.set(createdIds.get(3).getContractNum());
                 }),
-                sourcing(() -> getContractInfo(SHARD_AND_REALM + firstStickId.get())
-                        .has(contractWith().immutableContractKey(SHARD_AND_REALM + firstStickId.get()))
+                sourcing(() -> getContractInfo(String.valueOf(firstStickId.get()))
+                        .has(contractWith().immutableContractKey(String.valueOf(firstStickId.get())))
                         .logged()),
-                sourcing(() -> getContractInfo(SHARD_AND_REALM + secondStickId.get())
-                        .has(contractWith().immutableContractKey(SHARD_AND_REALM + secondStickId.get()))
+                sourcing(() -> getContractInfo(String.valueOf(secondStickId.get()))
+                        .has(contractWith().immutableContractKey(String.valueOf(secondStickId.get())))
                         .logged()),
                 sourcing(() ->
-                        getContractInfo(SHARD_AND_REALM + thirdStickId.get()).logged()),
+                        getContractInfo(String.valueOf(thirdStickId.get())).logged()),
                 contractCall(contract, "light").via("lightTxn"),
-                sourcing(() -> getContractInfo(SHARD_AND_REALM + firstStickId.get())
+                sourcing(() -> getContractInfo(String.valueOf(firstStickId.get()))
                         .has(contractWith().isDeleted())),
-                sourcing(() -> getContractInfo(SHARD_AND_REALM + secondStickId.get())
+                sourcing(() -> getContractInfo(String.valueOf(secondStickId.get()))
                         .has(contractWith().isDeleted())),
-                sourcing(() -> getContractInfo(SHARD_AND_REALM + thirdStickId.get())
+                sourcing(() -> getContractInfo(String.valueOf(thirdStickId.get()))
                         .has(contractWith().isDeleted())));
     }
 
@@ -420,7 +421,7 @@ public class ContractCreateSuite {
                     final var createdIds = creationResult.getCreatedContractIDsList();
                     assertEquals(1, createdIds.size(), "Expected one creations but got " + createdIds);
                     assertTrue(
-                            createdIds.get(0).getContractNum() < 10000,
+                            createdIds.getFirst().getContractNum() < 10000,
                             "Expected contract num < 10000 but got " + createdIds);
                 }));
     }
@@ -443,8 +444,7 @@ public class ContractCreateSuite {
                     final var registry = spec.registry();
                     final var aNum = (int) registry.getAccountID(aBeneficiary).getAccountNum();
                     final var bNum = (int) registry.getAccountID(bBeneficiary).getAccountNum();
-                    final var sendArgs =
-                            new Object[] {Long.valueOf(sendAmount), Long.valueOf(aNum), Long.valueOf(bNum)};
+                    final var sendArgs = new Object[] {(long) sendAmount, (long) aNum, (long) bNum};
 
                     final var op = contractCall(contract, "sendTo", sendArgs)
                             .gas(110_000)
@@ -560,8 +560,8 @@ public class ContractCreateSuite {
         final var revisedKey = KeyShape.threshOf(1, SIMPLE, DELEGATE_CONTRACT);
         final var newKey = "delegateContractKey";
 
-        final AtomicLong justSendContractNum = new AtomicLong();
-        final AtomicLong beneficiaryAccountNum = new AtomicLong();
+        final AtomicReference<ContractID> justSendContractId = new AtomicReference<>();
+        final AtomicReference<AccountID> beneficiaryAccountId = new AtomicReference<>();
 
         return hapiTest(
                 uploadInitCode(justSendContract, sendInternalAndDelegateContract),
@@ -569,14 +569,14 @@ public class ContractCreateSuite {
                 // when it has EVM address alias (isNotPriority check fails)
                 contractCreate(justSendContract)
                         .gas(300_000L)
-                        .exposingNumTo(justSendContractNum::set)
+                        .exposingContractIdTo(justSendContractId::set)
                         .refusingEthConversion(),
                 contractCreate(sendInternalAndDelegateContract).gas(300_000L).balance(2 * totalToSend),
                 cryptoCreate(beneficiary)
                         .balance(0L)
                         .keyShape(origKey.signedWith(sigs(ON, sendInternalAndDelegateContract)))
                         .receiverSigRequired(true)
-                        .exposingCreatedIdTo(id -> beneficiaryAccountNum.set(id.getAccountNum())),
+                        .exposingCreatedIdTo(beneficiaryAccountId::set),
                 /* Without delegateContractId permissions, the second send via delegate call will
                  * fail, so only half of totalToSend will make it to the beneficiary. (Note the entire
                  * call doesn't fail because exceptional halts in "raw calls" don't automatically
@@ -584,8 +584,8 @@ public class ContractCreateSuite {
                 sourcing(() -> contractCall(
                         sendInternalAndDelegateContract,
                         "sendRepeatedlyTo",
-                        new BigInteger(HapiPropertySource.asSolidityAddress(shard, realm, justSendContractNum.get())),
-                        new BigInteger(HapiPropertySource.asSolidityAddress(shard, realm, beneficiaryAccountNum.get())),
+                        new BigInteger(asSolidityAddress(justSendContractId.get())),
+                        new BigInteger(asSolidityAddress(beneficiaryAccountId.get())),
                         BigInteger.valueOf(totalToSend / 2))),
                 getAccountBalance(beneficiary).hasTinyBars(totalToSend / 2),
                 /* But now we update the beneficiary to have a delegateContractId */
@@ -594,8 +594,8 @@ public class ContractCreateSuite {
                 sourcing(() -> contractCall(
                         sendInternalAndDelegateContract,
                         "sendRepeatedlyTo",
-                        new BigInteger(HapiPropertySource.asSolidityAddress(shard, realm, justSendContractNum.get())),
-                        new BigInteger(HapiPropertySource.asSolidityAddress(shard, realm, beneficiaryAccountNum.get())),
+                        new BigInteger(asSolidityAddress(justSendContractId.get())),
+                        new BigInteger(asSolidityAddress(beneficiaryAccountId.get())),
                         BigInteger.valueOf(totalToSend / 2))),
                 getAccountBalance(beneficiary).hasTinyBars(3 * (totalToSend / 2)));
     }
@@ -668,7 +668,7 @@ public class ContractCreateSuite {
                             secondBlockRecord.getContractCallResult().getLogInfoList();
                     assertEquals(2, secondBlockLogs.size());
                     final var secondBlockTimeLogData =
-                            secondBlockLogs.get(0).getData().toByteArray();
+                            secondBlockLogs.getFirst().getData().toByteArray();
                     final var secondBlockTimestamp =
                             Longs.fromByteArray(Arrays.copyOfRange(secondBlockTimeLogData, 24, 32));
                     assertNotEquals(firstBlockTimestamp, secondBlockTimestamp, "Block timestamps should change");
@@ -858,6 +858,73 @@ public class ContractCreateSuite {
                         .refusingEthConversion()
                         .logged(),
                 getContractInfo(contract).has(ContractInfoAsserts.contractWith().maxAutoAssociations(0)));
+    }
+
+    @HapiTest
+    final Stream<DynamicTest> contractRevertBlockAndRecordFilesNotContainContractId() {
+        final var txn = "contractRevertBlockAndRecordFilesNotContainContractId";
+        AtomicReference<Timestamp> ts = new AtomicReference<>();
+        return hapiTest(
+                uploadInitCode(EMPTY_CONSTRUCTOR_CONTRACT),
+                contractCreate(EMPTY_CONSTRUCTOR_CONTRACT)
+                        .balance(1L)
+                        .via(txn)
+                        .hasKnownStatus(CONTRACT_REVERT_EXECUTED),
+                // check if CONTRACT_REVERT_EXECUTED record DON`T contains expected contractIds
+                withOpContext((spec, opLog) -> {
+                    final var record = getRecord(spec, txn, CONTRACT_REVERT_EXECUTED);
+                    ts.set(record.getConsensusTimestamp());
+                    assertRecordContractId(record, false);
+                }));
+    }
+
+    @HapiTest
+    final Stream<DynamicTest> blockAndRecordFilesNotContainContractId() {
+        final var txn = "blockAndRecordFilesNotContainContractId";
+        AtomicReference<Timestamp> ts = new AtomicReference<>();
+        return hapiTest(
+                uploadInitCode(EMPTY_CONSTRUCTOR_CONTRACT),
+                contractCreate(EMPTY_CONSTRUCTOR_CONTRACT).via(txn).hasKnownStatus(SUCCESS),
+                // check if record contains expected contractIds
+                withOpContext((spec, opLog) -> {
+                    final var record = getRecord(spec, txn, SUCCESS);
+                    ts.set(record.getConsensusTimestamp());
+                    assertRecordContractId(record, true);
+                }));
+    }
+
+    @HapiTest
+    final Stream<DynamicTest> contractCreateGas() {
+        final String txn = "contractCreateGas";
+        return hapiTest(
+                uploadInitCode("Storage"),
+                contractCreate("Storage").gas(124_000L).via(txn).logged(),
+                getTxnRecord(txn).andAllChildRecords().logged().saveTxnRecordToRegistry(txn),
+                withOpContext((spec, ignore) -> {
+                    final var gasUsed = spec.registry()
+                            .getTransactionRecord(txn)
+                            .getContractCreateResult()
+                            .getGasUsed();
+                    assertEquals(117661, gasUsed);
+                }));
+    }
+
+    private TransactionRecord getRecord(HapiSpec spec, String txn, ResponseCodeEnum status) {
+        final var hapiGetRecord = getTxnRecord(txn);
+        allRunFor(spec, hapiGetRecord);
+        // Getting record
+        final var respRecord = hapiGetRecord.getResponse();
+        assertTrue(respRecord.hasTransactionGetRecord());
+        final var record = respRecord.getTransactionGetRecord().getTransactionRecord();
+        assertEquals(status, record.getReceipt().getStatus());
+        return record;
+    }
+
+    private void assertRecordContractId(TransactionRecord record, boolean shouldContractIdExists) {
+        // check record->receipt->contractId
+        assertEquals(shouldContractIdExists, record.getReceipt().hasContractID());
+        // check record->contractCreateResult->contractId
+        assertEquals(shouldContractIdExists, record.getContractCreateResult().hasContractID());
     }
 
     private EthTxData placeholderEthTx() {
